--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -8,8 +8,7 @@
   ],
   "assets": {
     "directory": "dist",
-    "binding": "ASSETS",
-    "not_found_handling": "single-page-application"
+    "binding": "ASSETS"
   },
   "observability": {
     "enabled": true
